Source/WebCore/page/EventHandler.cpp
@@ -2586,6 +2586,11 @@ void EventHandler::platformNotifyIfEndGesture(const PlatformWheelEvent&, Scrolla
 {
 }
 
+IntPoint EventHandler::effectiveMousePositionForSelectionAutoscroll() const
+{
+    return m_lastKnownMousePosition;
+}
+
 #endif
 
 bool EventHandler::handleWheelEvent(const PlatformWheelEvent& event)
