Source/WebCore/platform/PlatformScreen.h
@@ -65,6 +65,7 @@ namespace WebCore {
 
 #if PLATFORM(MAC)
     NSScreen *screenForWindow(NSWindow *);
+    NSScreen *screenForDisplayID(PlatformDisplayID);
 
     WEBCORE_EXPORT FloatRect toUserSpace(const NSRect&, NSWindow *destination);
     WEBCORE_EXPORT NSRect toDeviceSpace(const FloatRect&, NSWindow *source);
